<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/drawable_background">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etLoginEmail"
        style="@style/EdittextLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:drawableStart="@drawable/ic_person"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/etLoginSenha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="gnunes1909@gmail.com" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etLoginSenha"
        style="@style/EdittextLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_locked"
        android:hint="@string/email"
        android:inputType="numberPassword|number"
        android:maxLength="20"
        app:layout_constraintBottom_toTopOf="@+id/btnLoginCadastrar"
        app:layout_constraintEnd_toEndOf="@id/etLoginEmail"
        app:layout_constraintStart_toStartOf="@id/etLoginEmail"
        app:layout_constraintTop_toBottomOf="@id/etLoginEmail"
        tools:text="11111111" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLoginCadastrar"
        style="@style/ButtonLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/logar"
        app:layout_constraintBottom_toBottomOf="@+id/tvLoginCadastrar"
        app:layout_constraintEnd_toEndOf="@+id/etLoginSenha"
        app:layout_constraintStart_toStartOf="@+id/etLoginSenha"
        app:layout_constraintTop_toBottomOf="@+id/etLoginSenha" />

    <TextView
        android:id="@+id/tvLoginCadastrar"
        style="@style/TextViewLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/criar_conta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvLoginMais"
        app:layout_constraintStart_toStartOf="@+id/btnLoginCadastrar"
        app:layout_constraintTop_toBottomOf="@+id/btnLoginCadastrar" />

    <TextView
        android:id="@+id/tvLoginMais"
        style="@style/TextViewLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/mais"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="@+id/btnLoginCadastrar"
        app:layout_constraintStart_toEndOf="@+id/tvLoginCadastrar"
        app:layout_constraintTop_toBottomOf="@+id/btnLoginCadastrar" />

</androidx.constraintlayout.widget.ConstraintLayout>